# ai-sdlc-copilot

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/models/: pytest_models.py  testcase.py
backend/app/prompts/: pytest_prompt.py  testcase_prompt.py
backend/app/routers/: pytest_router.py  testcases.py
backend/app/services/: github_service.py  llm_service.py
backend/tests/: test_api.py  test_generated.py  test_login.py
docs/: ARCHITECTURE-DIAGRAMS.md  PROMPTS.md  hld-mvp-free.md  hld-production.md  hld.md  test-case-generation-flow.md
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx  index.ts
frontend/src/pages/: AnalyzePage.tsx  DashboardPage.tsx  GitHubPage.tsx  PyTestPage.tsx  SettingsPage.tsx  TestCasesPage.tsx  index.ts
frontend/src/services/: api.ts
