# AI SDLC Co-Pilot - Backend
# ==========================
# Modern Python project configuration (PEP 621)

[project]
name = "ai-sdlc-copilot"
version = "0.1.0"
description = "Automated test case generation, PR review, and defect creation using LLMs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ali Haidar", email = "alihaidar2950@gmail.com" }]
keywords = ["ai", "testing", "sdlc", "llm", "fastapi"]

# Production dependencies
dependencies = [
    # Core Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database & Cache (Free Tiers)
    "supabase>=2.3.0",
    "redis>=5.0.0",
    "httpx>=0.24.0,<0.25.0",

    # LLM Integration (Free Tiers)
    "google-generativeai>=0.3.0",
    "groq>=0.4.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",

    # Code Quality
    "ruff>=0.1.0",
    "black>=23.11.0",
    "mypy>=1.7.0",

    # Development
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/alihaidar2950/ai-sdlc-copilot"
Repository = "https://github.com/alihaidar2950/ai-sdlc-copilot"
Documentation = "https://github.com/alihaidar2950/ai-sdlc-copilot#readme"

# =============================================================================
# Build System
# =============================================================================
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
